src/objects/Governance_Compliance_Association__c.object
<CustomObject>
    <fields>
        <fullName>Compliance__c</fullName>
        <label>Compliance</label>
        <referenceTo>Compliance__c</referenceTo>
        <relationshipLabel>Associated Governance</relationshipLabel>
        <relationshipName>Governance_Compliance_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Governance__c</fullName>
        <label>Governance</label>
        <referenceTo>Governance__c</referenceTo>
        <relationshipLabel>Associated Compliance</relationshipLabel>
        <relationshipName>Governance_Compliance_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Regulation_Status__c</fullName>
        <formula>TEXT(Governance__r.Regulation_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regulation Status</label>
        <type>Text</type>
    </fields>
    <label>Governance/Compliance Association</label>
    <nameField>
        <displayFormat>GCA{000000}</displayFormat>
        <label>Governance/Compliance Association Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Governance/Compliance Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>